43rd commit - adicionado route correto para suspender uma conta, e alterar local de evento, e adicionado funcao de remover promotor ao userController
